[package]
name = "bev"
version = "0.1.0"
authors = ["@danielbintar <daniel.bintar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
futures = "0.3.15"
prost = "0.7.0"
tokio = { version = "1.6.1", features = ["rt-multi-thread"] }
tonic = "0.4.2"

[build-dependencies]
tonic-build = "0.4.2"
